--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,9 @@ Django==2.0.6
 gunicorn==19.6.0
 psycopg2==2.7.7
 python-decouple==3.1
+pytz==2018.9Django==2.0.6
+gunicorn==19.6.0
+psycopg2==2.7.7
+python-decouple==3.1
 pytz==2018.9
+whitenoise==4.1.2
